--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a simple chat application in node",
   "main": "app.js",
   "scripts": {
-	"start": "node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "dependencies": {
     "ent": "^2.2.0",
     "express": "^4.14.0",
+    "moment-timezone": "^0.5.11",
     "socket.io": "^1.7.2"
   }
 }
