--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "ent": "^2.2.0",
     "express": "^4.14.0",
+    "formidable": "^1.1.1",
     "moment-timezone": "^0.5.11",
     "socket.io": "^1.7.2"
   }
