--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ent": "^2.2.0",
     "express": "^4.14.0",
     "moment-timezone": "^0.5.11",
+    "openpgp": "^2.3.6",
     "socket.io": "^1.7.2"
   }
 }
