--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a simple chat application in node",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+	"keygen": "node pgp_helper.js"
   },
   "repository": {
     "type": "git",
