--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/levg34/nodejs-chat#readme",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "ent": "^2.2.0",
     "express": "^4.14.0",
     "moment-timezone": "^0.5.11",
