--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.16.1",
     "ent": "^2.2.0",
     "express": "^4.14.0",
+    "firebase-admin": "^5.4.2",
     "moment-timezone": "^0.5.11",
     "openpgp": "^2.3.6",
     "socket.io": "^1.7.2"
